# mairie

./: .env  .env.example  .env.prod.example  .gitignore  Makefile  PROD.md  README.MD  README.md  alerts.yml  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mairie.code-workspace  mkdocs.yml  package-lock.json  prometheus.prod.yml  prometheus.yml  promtail.prod.yml  promtail.yml  pyproject.toml
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  dockerfile  dockerignore  main.py  pyproject.toml  start.ipynb  test_ocr.py
backend/alembic/: env.py
backend/alembic/versions/: 21ab16d4136d_drop_agent_prenom_column.py  319d2bfc4918_drop_ordinateur_agent_id_unique.py  3b36ae810256_initial_migration.py  3eaf6c70baa3_.py  85bd87dc3d00_initial_schema.py  9c59647ecb6f_drop_agent_service_column.py  a1b2c3d4e5f6_relax_required_fields_and_constraints.py  b0aa449cb9cc_.py  b2c3d4e5f6a7_collapse_documents.py  c1d2e3f4a5b6_add_token_blacklist_index.py  d1245b5eb0fb_tag_not_null_clef_not_null_unique.py  fe8de391e2f7_initial.py
backend/api/routes/: __init__.py  agent.py  auth.py  auth_routes.py  documents.py  ecran.py  ecrans.py  ecrans_routes.py  inventaire.py  licenses.py  licenses_routes.py  logs.py  model.py  office_licence.py  ordinateur.py  ordinateurs.py  ordinateurs_routes.py  qrcode.py  schema.py  (+3 more)
backend/app/: main.py
backend/core/: __init__.py  dependencies.py  logger.py  logging_db.py  security.py  settings.py  tasks.py
backend/db/: __init__  __init__.py  db.py  models.py  seed.py  session.py  settings.py  test_conn.py
backend/model/: pdf.py
backend/schemas/: __init__.py  _init_.py  agent.py  auth.py  auth_schemas.py  base_equipment.py  documents.py  ecran.py  ecrans.py  ecrans_schemas.py  inventaire.py  licenses.py  logs.py  office_licence.py  office_license.py  officelicenses_schemas.py  ordinateur.py  ordinateurs.py  ordinateurs_schemas.py  user.py  users.py
backend/services/: __init__.py  ocr.py  qrcode.py
backend/tests/: README.md  conftest.py
backend/utils/: clean_excel.py  clean_to_models.py  convert_excel.py  seed.py  seed_example.py
(+183 files in other folders)
