[project]
name = "mairie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "mistral>=21.0.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.5.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
