[project]
name = "mairie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "mistral>=21.0.0",
    "mypy>=1.19.1",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.11",
    "sqlalchemy>=2.0",
]
