[project]
name = "mairie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "alembic>=1.17.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.11",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.5.0",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pypdf>=6.5.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "ruff>=0.14.11",
    "pre-commit>=4.5.1",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]